# openclaw-install-cn

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  integration-test.yml  manual-test-unix.yml  manual-test-windows.yml  offline-bundle.yml  release.yml  sync-openclaw.yml
cdn-template/: README.md  cli-manifest.json  manifest.json
cli/: package-lock.json  package.json
cli/src/: index.js
cli/src/__tests__/: completion.test.js  config-cmd.test.js  config.test.js  downloader.test.js  install.test.js  installer.test.js  logger.test.js  platform.test.js  runtime.test.js  status.test.js  upgrade.test.js
cli/src/__tests__/integration/: integration.test.js  (+3 more)
cli/src/commands/: completion.js  config.js  install.js  status.js  upgrade.js
cli/src/lib/: config.js  downloader.js  installer.js  logger.js  platform.js  registry.js  runtime.js
docs/: deployment.md  gui-guide.md
gui/: package.json
gui/assets/: README.md  icon.icns
gui/scripts/: collect-artifacts.js
gui/src/: main.js  preload.js
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: main.rs
gui/src/__tests__/: config.test.js  downloader.test.js  helpers.js  installer.test.js  logger.test.js  platform.test.js  registry.test.js  runtime.test.js
gui/src/lib/: config.js  downloader.js  installer.js  platform.js  registry.js  runtime.js
gui/src/renderer/: app.js  bridge.js  index.html  styles.css
scripts/: gen-icons.js  install.ps1  install.sh
scripts/__tests__/: install.ps1.Tests.ps1  install.sh.bats
